# rgb

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.yml  README.md  SECURITY.md  codecov.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
cli/: Cargo.toml  README.md
cli-old/src/: args.rs  command.rs
cli/src/: args.rs  cmd.rs  command.rs  exec.rs  loglevel.rs  main.rs  opts.rs  resolver.rs
descriptors/: Cargo.toml
descriptors/src/: display.rs  lib.rs  parse.rs
doc/: Payments.md
examples/: .gitignore  Demo.yaml  DemoToken.yaml  RGB20-FNA.issuer  RGB20-NFA.issuer  Transfer.yaml  demo.sh  demo_custom.sh  nia-demo.yaml  rgb20-demo.con  rgb20-demo.contract  rgb20-demo.contract.rgb  rgb20-demo.iimpl.rgb  rgb20-demo.json  rgb20-demo.rgb  rgb20-demo.rgba  rgb20-demo.schema.rgb  rgb20-demo.toml  rgb20-demo.yaml  script.sh  token.rs  transfer.pfab  transfer.psbt  transfer.rgb
examples/data/: NonInflatableAsset.issuer  alice.key  bob.key  seed
examples/data/bcor/: NonInflatableAsset.issuer
examples/data/bcor/alice/: cache.yaml  data.toml  descriptor.toml
examples/data/bcor/bob/: cache.yaml  data.toml  descriptor.toml
examples/data/bitcoin.testnet/alice.wallet/: cache.yaml  data.toml  descriptor.toml  utxo.toml
examples/data/testnet4/: alice  bob  bp.toml
examples/data2/: .gitignore  NonInflatableAsset.issuer
examples/data2/bcor/: NonInflatableAsset.issuer  alice
examples/data2/bcor/bob/: descriptor.toml
examples/data2/bitcoin.testnet/bob.wallet/: cache.yaml  data.toml  descriptor.toml  utxo.toml
examples/dump/: 0-articles.yaml  0001-op.lCsorT9zPNo3dMmCeQmAYcRUrbugrsHWsDphhZm2TQQ.yaml
fs/: Cargo.toml
fs/src/: lib.rs  stock.rs
invoice/: Cargo.toml
invoice/src/: builder.rs  invoice.rs  lib.rs  parse.rs
old/: descriptor.rs  errors.rs  pay.rs
old/indexers/: any.rs  esplora_blocking.rs
psbt/: Cargo.toml
psbt/src/: bp.rs  common.rs  lib.rs  pay.rs  rgb.rs
runtime/: Cargo.toml
runtime/src/: descriptor.rs  descriptors.rs  lib.rs  runtime.rs  wallet.rs
src/: args.rs  barrow.rs  bp.rs  coinselect.rs  command.rs  descriptor.rs  descriptor_old.rs  electrum.rs  errors.rs  filters.rs  info.rs  lib.rs  main.rs  omnistore.rs  opts.rs  owner.rs  pay.rs  payment.rs  resolver.rs  runtime.rs  store.rs  utxoset.rs  wallet.rs  wrapper.rs
src/indexers/: any.rs  electrum_blocking.rs  esplora_blocking.rs  mempool_blocking.rs  mod.rs
src/resolvers/: any.rs  electrum.rs  electrum_blocking.rs  esplora.rs  esplora_blocking.rs  mod.rs
tests/: coverage.sh  docker-compose.yml  start_services.sh  transfers.rs
tests/fixtures/: CollectibleFungibleAsset.issuer  NonInflatableAsset.issuer
tests/utils/: chain.rs  mod.rs  report.rs  runtime.rs
