[workspace]
members = [".", "psbt", "cli"]
default-members = [".", "psbt"]

[workspace.package]
version = "0.12.0-rc.2"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://rgb.tech"
repository = "https://github.com/RGB-WG/rgb"
rust-version = "1.85.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.9.0"
nonasync = "0.1.2"
strict_encoding = "2.9.1"
strict_types = "2.9.0"
commit_verify = "0.12.0-rc.1"
bp-core = "0.12.0-rc.2"
bp-std = { version = "0.12.0-rc.2", features = ["client-side-validation"] }
bp-electrum = "0.12.0-rc.1"
bp-esplora = { version = "0.12.0-rc.1", default-features = false, features = ["blocking-https"] }
bp-wallet = { version = "0.12.0-rc.2" }
rgb-std = { version = "0.12.0-rc.2" }
rgb-runtime = { version = "0.12.0-rc.2", path = "." }
rgb-psbt = { version = "0.12.0-rc.2", path = "psbt" }
rgb-persist-fs = { version = "0.12.0-rc.2" }
indexmap = "2.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.19"
toml = "0.8.22"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }

[package]
name = "rgb-runtime"
description = "RGB smart contracts wallet runtime"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "rgbp"
crate-type = ["cdylib", "rlib"]

[dependencies]
amplify = { workspace = true }
commit_verify = { workspace = true }
strict_types = { workspace = true }
nonasync = { workspace = true }
bp-std = { workspace = true }
bp-wallet = { workspace = true }
rgb-std = { workspace = true, features = ["bitcoin"] }
rgb-psbt = { workspace = true, features = ["bp"] }
rgb-persist-fs = { workspace = true, optional = true }
indexmap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[dev-dependencies]
toml.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["std"]
all = [
    "std",
    "serde", "log", "fs",
]
std = []
fs = [
    "std",
    "serde",
    "rgb-std/binfile",
    "dep:rgb-persist-fs",
    "bp-wallet/fs",
]
log = ["dep:log", "bp-wallet/log"]
serde = [
    "dep:serde", "serde_yaml",
    "bp-std/serde", "rgb-std/serde"
]

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
bp-wallet = { git = "https://github.com/Crayon-Shin-chan-bitlightlabs/bp-wallet.git", branch = "master" }