[package]
name = "rgb-wallet"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
path = "src/main.rs"
name = "rgb"

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
hypersonic = { workspace = true, features = ["persist-file"] }
bp-wallet = { workspace = true, features = ["fs", "serde"] }
rgb-std = { workspace = true, features = ["fs", "serde"] }
rgb-bp = { workspace = true, features = ["fs", "serde"] }
serde.workspace = true
serde_yaml = "0.9.34"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "env"] }
