[package]
name = "rgb-persist-fs"
version = "0.11.1"
description = "RGB persistence drivers for file storage"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "rgbfs"

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
rgb-std = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
features = ["all"]
