[package]
name = "rgb-invoice"
version = { workspace = true }
description = "Invoicing library for RGB smart contracts"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "rgbinvoice"

[dependencies]
amplify = { workspace = true }
baid58 = { workspace = true }
strict_encoding = { workspace = true }
bp-seals = { workspace = true }
bp-std = { workspace = true }
rgb-std = { workspace = true }
indexmap = { workspace = true }
fluent-uri = "0.1.4"
percent-encoding = "2.3.0"

[features]
default = []
