[package]
name = "rgb-psbt"
version = { workspace = true }
description = "Partially signed bitcoin transaction RGB extensions"
keywords = ["bitcoin", "invoices", "rgb", "smart-contracts", "psbt"]
categories = ["cryptography::cryptocurrencies"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "psrgbt"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify = { workspace = true }
baid64 = { workspace = true }
commit_verify = { workspace = true }
strict_encoding = { workspace = true }
bp-core = { workspace = true }
bp-std = { workspace = true }
rgb-std = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = ["serde"]
serde = ["bp-core/serde", "bp-std/serde", "rgb-std/serde"]

[package.metadata.docs.rs]
features = ["all"]
