[package]
name = "rgb-runtime"
version.workspace = true
description = "RGB smart contracts wallet runtime"
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rgb_rt"

[dependencies]
amplify = { workspace = true }
strict_types = { workspace = true }
bp-dbc = { workspace = true }
bp-std = { workspace = true }
bp-wallet = { workspace = true, features = ["fs"] }
bp-esplora = { workspace = true, optional = true }
descriptors = "=0.10.0-BP-beta.1"
rgb-std = { workspace = true }
rgb-persist-fs = { version = "0.11.0-alpha", path = "../fs" }
serde_crate = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
default = []
all = ["esplora",  "serde", "log"]
esplora = ["bp-esplora", "bp-wallet/esplora"]
serde = ["serde_crate", "serde_yaml", "bp-std/serde", "bp-wallet/serde",]
